Fix websocket config